--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 * {
-  font-family: "Times New Roman", Times, serif, -apple-system,
-    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
-    Noto Color Emoji;
+    font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   letter-spacing: 0.5px;
 }
 
@@ -19,9 +18,9 @@
   position: relative;
   padding-left: 0px;
   padding-right: 0px;
-  width: 25vh !important;
+  width: 28vh !important;
   flex: 0 0 25%;
-  max-width: 25vh !important;
+  max-width: 28vh !important;
   margin-left: 0%;
   right: auto;
   left: auto;
@@ -299,6 +298,7 @@
   font-weight: bold;
   margin-bottom: -3px;
   user-select: none;
+  font-family: 'Michroma', sans-serif;
 }
 
 .buddies-list-name:hover {
@@ -489,19 +489,12 @@
   max-width: 97vh;
 }
 
-.jodit-wysiwyg {
-  background-color: white;
-  border-bottom: 3px solid #f4f4f4;
-  border-right: 3px solid #f4f4f4;
-  border-left: 3px solid #848484;
-  border-top: 3px solid #848484;
-}
-
 .message-form {
   overflow: hidden;
   border-radius: 6px;
   background-color: white;
   width: 100%;
+  margin-top: 1%;
 }
 
 .message-expressions {
@@ -554,7 +547,8 @@
 }
 
 .send-block-container {
-  margin-left:300px;
+  position: relative;
+    left: 622px;
 }
 
 .send-button {
@@ -848,7 +842,7 @@
   width: 95%;
   height: 40px;
   border: 2px inset;
-  margin-top: 20px;
+  margin-top:15px;
 }
 
 .new-friend-form input:focus {
@@ -872,7 +866,7 @@
 .user {
   font-size: 0.85rem;
   margin-bottom: 15px;
-  height: 9%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   width:100%;
@@ -884,16 +878,17 @@
   height: 7%;
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .user-actions button {
+  font-size: .75rem;
   border: 2px outset;
   background-color: transparent;
-  padding: 0.5rem 1rem;
-  margin: 0.25rem;
+  padding: 0.35rem 1rem;
+  margin: 3px;
 }
 
 .user-actions button:active {
@@ -925,7 +920,7 @@
   border: 2px solid black;
   margin-left: 2px;
   width: 98%;
-  margin-bottom: 20px;
+  margin-bottom: 4px;
 }
 
 .user-details {
