--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@
   border-left: 1px solid white;
   border-right: 1px solid #848484;
   border-bottom: 1px solid #848484;
-  box-shadow: 1px 1px 1px #424242;
+  box-shadow: 1px 1px 1px #424242; 
   text-align: center;
   line-height: 7px;
 }
@@ -353,6 +353,13 @@
   border: none;
   font-weight: bold;
   margin-right: 20px;
+  padding: .5rem 1rem;
+}
+
+.message-form-color-picker {
+  position:absolute;
+  top:40px;
+  left: 166px;
 }
 
 .font-highlight-color {
@@ -388,6 +395,10 @@
   align-items: center;
   font-size: 1rem;
   margin-left: 25px;
+}
+
+.bold {
+  font-weight: 900;
 }
 
 .font-size-normal {
@@ -464,6 +475,15 @@
   background-size: 14px;
 }
 
+.message-border {
+  width: 2px;
+  border-left: 1px solid rgb(132, 132, 132);
+  border-right: 1px solid rgb(255, 255, 255);
+  height: calc(100% - 2px);
+  margin: 0px 3px;
+  align-self: flex-end;
+}
+
 .message-form-actions {
   position: absolute;
   bottom: 20px;
@@ -501,7 +521,7 @@
 .message-events-container {
   display: flex;
   justify-content: space-around;
-  width: 20%;
+  width: 80% 
 }
 
 .message-expressions {
@@ -509,12 +529,19 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+  cursor: pointer;
+}
+
+.message-expressions img {
+  height: 30px;
+  width: 30px;
 }
 
 .message-games {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 
 .message-games img {
@@ -522,9 +549,16 @@
   width: 30px;
 }
 
-.message-expressions img {
-  height: 30px;
-  width: 30px;
+.add-group {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.add-group img {
+  height: 25px;
+  width: 25px;
 }
 
 .message-input {
@@ -568,7 +602,9 @@
 }
 
 .send-block-container {
-  position: relative;
+  width:10%;
+  display:flex;
+  justify-content: center;
   /* left: 622px; */
 }
 
@@ -635,9 +671,8 @@
 
 .user-warnings-container {
   display: flex;
-  width: 15%;
+  width: 10%;
   justify-content: space-around;
-  border-right: 2px outset;
 }
 
 .user-warnings-container img {
@@ -999,6 +1034,14 @@
   width: 100%;
 }
 
+.user-settings-delete button:active {
+  background: #e5e5e5;
+  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+  -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+  box-shadow: inset 0px 0px 5px #c1c1c1;
+  outline: none;
+}
+
 .user-status {
   font-size: 0.7rem;
   /* word-break: break-all; */
@@ -1082,6 +1125,10 @@
 /* NEW USER WELCOME PAGE STYLES */
 .new-user-body {
   font-size: 1.5rem;
+  height:75%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .new-user-body h1 {
@@ -1174,7 +1221,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 75vh;
+  height: 80vh;
   width: 157%;
   border: 3px inset;
   overflow: scroll;
@@ -1566,14 +1613,45 @@
   }
 }
 
-/* Media queries */
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Media queries !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+/* Laptop monitors */
+@media (max-width:1024px) {
+  .chat-feed {
+    width: 148%;
+  }
+
+  .message-form-container {
+    min-width: 148%;
+    max-width: 148%;
+    width: 150vh;
+  }
+
+  .new-friend-form input {
+    height:30px;
+  }
+
+  .user-actions {
+    margin-top:15px;
+    margin-bottom: 10px;
+  }
+
+}
+
+/* Large monitors/screens */
 @media (max-width:1440px) {
   .new-friend-form input {
     height:30px;
   }
+
   .user-actions {
-    margin-top:0;
+    margin-top:20px;
     margin-bottom: 10px;
+  }
+  
+  .user-actions .error {
+    margin-top: 10px;
+    font-size: 1rem;
   }
 
   .user-channels {
