--- a/src/App.css
+++ b/src/App.css
@@ -261,6 +261,10 @@
 }
 
 .user-message {
+  /* Changed from 0 to 100 to make sure the username appears at top of message if 
+    length is very long and spans multiple lines  
+  */
+  height: 100%;  
   color: blue;
   font-weight: bold;
   margin-right: 3px;
@@ -448,7 +452,7 @@
 .message {
   font-size: 22px;
   border-radius: 6px;
-  max-width: 60%;
+  max-width: 100%;
   display: flex;
   align-items: center;
 }
@@ -1044,7 +1048,7 @@
 
 .user-status {
   font-size: 0.7rem;
-  /* word-break: break-all; */
+  word-break: break-all;
 }
 
 .dots-status-loader {
@@ -1147,7 +1151,7 @@
   position: absolute;
   top: 52px;
   left: 90px;
-  width: 150.25%;
+  width: 157.25%;
   padding: 0 5px;
   background: #08216b;
   background: -webkit-linear-gradient(left, #08216b, #a5c6ef);
@@ -1645,7 +1649,7 @@
   }
 
   .user-actions {
-    margin-top:20px;
+    margin-top:0px;
     margin-bottom: 10px;
   }
   
