--- a/src/App.css
+++ b/src/App.css
@@ -300,6 +300,32 @@
   letter-spacing: -1px;
 }
 
+.buddies-list-name::before {
+  content: "►";
+  font-size: 1rem;
+  position: relative;
+  left: -2px;
+}
+
+.buddies-list-name-active {
+  margin-left: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  margin-bottom: -3px;
+  user-select: none;
+  font-family: "Michroma", sans-serif;
+  letter-spacing: -1px;
+  cursor: pointer;
+}
+
+.buddies-list-name-active::before {
+  content: "⮟";
+  font-size: 1rem;
+  position: relative;
+  left: -5px;
+}
+
+
 .buddies {
   font-family: "MS Sans Serif", Arial, Helvetica, sans-serif;
   font-weight: 900;
@@ -838,13 +864,6 @@
   position: relative;
 }
 
-.buddies::before {
-  content: "↠";
-  font-size: 0.8rem;
-  position: absolute;
-  left: -18px;
-}
-
 .channel-list-active::before {
   content: "⮟";
   font-size: 0.8rem;
@@ -1048,7 +1067,7 @@
 
 .user-status {
   font-size: 0.7rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .dots-status-loader {
