--- a/src/App.css
+++ b/src/App.css
@@ -319,11 +319,12 @@
 }
 
 .buddies-list-name-active::before {
-  content: "▼";
+  content: "⮟";
   font-size: 1rem;
   position: relative;
   left: -5px;
 }
+
 
 .buddies {
   font-family: "MS Sans Serif", Arial, Helvetica, sans-serif;
@@ -713,6 +714,121 @@
   cursor: pointer;
 }
 
+/* GROUP WINDOW STYLES */
+.group-form-container {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.group-form-container button {
+  cursor: pointer;
+  border: 2px outset;
+  background-color: transparent;
+  width:100%;
+  padding: .5rem 0;
+}
+
+.group-form-container button:active {
+  background: #e5e5e5;
+  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+  -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+  box-shadow: inset 0px 0px 5px #c1c1c1;
+  outline: none;
+}
+
+.group-form-container form {
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  font-weight: bolder;
+  position: relative;
+  bottom: 30px;
+}
+
+.groupInput {
+  margin-top: 5px;
+  width: 300px;
+  border: 2px inset;
+}
+
+.groupInput:focus {
+  outline: none;
+}
+
+.group-item-container {
+  background-color: lightgrey;
+  margin: 0px 3px;
+  width: 75px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor:pointer;
+} 
+
+.group-item {
+  font-size: .8rem;
+  cursor: pointer;
+  padding: 2px;
+}
+
+
+.group-item-indicator {
+  height: 13px;
+  width: 13px;
+  position: relative;
+  border:1px solid black;
+  border-radius: 100%;
+}
+
+.inactive {
+  background-color: white;
+}
+
+.active {
+  background-color: rgb(91 255 0);
+}
+
+.current-groups-container {
+  height: 30px;
+  width: 80%;
+  background-color:white;
+  border-radius: 5px;
+  border: 2px inset;
+  position:relative;
+  top: 30px;
+}
+
+.current-groups-list {
+  display: flex;
+  list-style: none;
+  justify-content: flex-start;
+  height: 100%;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.group-window-container {
+  height:100%;
+  width:100%;
+  background: #d6d6ce;
+  display:flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.group-window-message {
+  font-size:.8rem;
+  width:75%;
+  font-weight: bold;
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
+
 /* ICON WINDOW STYLES */
 .icon-change-form {
   display: flex;
@@ -1002,14 +1118,27 @@
   font-size: 0.85rem;
 }
 
+.user-channels-outer {
+  border: 1px solid rgb(249, 245, 242);
+  position: relative;
+  background-color: #d6d6ce;
+  padding-top: 4px;
+  box-shadow: rgb(3 3 0) 1px 1px 1px;
+  margin: 4px 5px 0;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  height:73%;
+}
+
 .user-channels {
   background-color: white;
   font-size: 1.2rem;
-  height: 73%;
-  border: 2px solid black;
-  margin-left: 2px;
+  height: 100%;
+  margin: 3px;
   width: 98%;
-  margin-bottom: 4px;
+  box-shadow: rgb(0 0 0) 2px 2px 1px inset;
 }
 
 .user-details {
@@ -1044,6 +1173,7 @@
 
 .user-settings-delete {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   position: relative;
   top: 70px;
@@ -1122,26 +1252,54 @@
 }
 
 .user-tabs {
-  margin-left: 1px;
-  margin-bottom: 5px;
+  display:flex;
+  list-style: none;
+  align-items: flex-end;
+  margin: 0 0 0 5px;
+  padding: 0px;
 }
 
-.user-tabs button {
-  border: none;
-  background-color: transparent;
-  padding: 0.5rem;
-  padding-top: 0.7rem;
-  padding-bottom: 0;
+.buddies-tab {
+  box-sizing: border-box;
+}
+
+.settings-tab {
+  box-sizing: border-box;
+}
+
+.inactive-tab {
+    position: relative;
+    appearance: none;
+    padding: 4px 8px;
+    margin: 0px;
+    background: transparent;
+    font: inherit;
+    border-radius: 4px 0px 0px;
+    border-width: 1px 1px 0px;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-top-color: rgb(249, 245, 242);
+    border-right-color: rgb(249, 245, 242);
+    border-left-color: rgb(249, 245, 242);
+    border-image: initial;
+    border-bottom-style: initial;
+    border-bottom-color: initial;
+    box-shadow: rgb(3 3 0) 1px 1px 1px;
+}
+
+.active-tab {
+  border-bottom-color: transparent;
+  font-weight: bold;
+  border-right: 0px;
+  z-index: 1;
+  position: relative;
+  background: #d6d6ce;
+  padding: 4px 8px;
 }
 
 .user-tabs button:hover {
   cursor: pointer;
-}
-
-.user-tabs button:focus {
-  border-top: 2px outset;
-  border-right: 2px outset;
-  border-left: 2px outset;
 }
 
 /* NEW USER WELCOME PAGE STYLES */
@@ -1662,10 +1820,6 @@
 
 /* Large monitors/screens */
 @media (max-width:1440px) {
-  .ce-chat-list-column {
-    max-width: 32vh !important;
-  }
-
   .new-friend-form input {
     height:30px;
   }
@@ -1680,11 +1834,7 @@
     font-size: 1rem;
   }
 
-  .user-channels {
-    height: 70%;
-  }
-
-  .user-tabs {
-    margin-top: 20px;
+  .user-channels-outer {
+    height: 71%;
   }
 }
