--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,48 @@
   border-left: 1px solid lightgray;
 }
 
+/* USER GROUP ITEM STYLES */
+.group-list-name {
+    margin-top: 30px;
+    font-weight: bold;
+    margin-bottom: -3px;
+    -webkit-user-select: none;
+    user-select: none;
+    font-family: "Michroma", sans-serif;
+    letter-spacing: -1px
+}
+
+.group-list-name::before {
+  content: "►";
+  font-size: 1rem;
+  position: relative;
+  left: -2px;
+}
+
+.group-list-name-active {
+  margin-top: 30px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  user-select: none;
+  font-family: "Michroma", sans-serif;
+  letter-spacing: -1px;
+  cursor: pointer;
+}
+
+.group-list-name-active::before {
+  content: "⮟";
+  font-size: 1rem;
+  position: relative;
+  left: -5px;
+}
+
+.group-list-item {
+  position:relative;
+  display: flex;
+  flex-direction: column;
+  margin: 5px 5px 15px 20px;
+}
+
 .ce-wrapper {
   margin-left: 0px;
   margin-right: 0px;
@@ -287,7 +329,7 @@
   height: 25px;
   width: 25px;
   position: absolute;
-  left: 25px;
+  left: -10px;
 }
 
 .buddies-list-name {
@@ -559,7 +601,6 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  cursor: pointer;
 }
 
 .message-expressions img {
@@ -571,7 +612,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
 }
 
 .message-games img {
@@ -715,6 +755,14 @@
 }
 
 /* GROUP WINDOW STYLES */
+.group-channel-name {
+  list-style: none;
+  font-size: 0.85rem;
+  margin-left: 25px;
+  font-weight: bold;
+  user-select: none;
+}
+
 .group-form-container {
   height: 50%;
   display: flex;
@@ -990,6 +1038,7 @@
   display: flex;
   flex-direction: column;
   margin: 15px 5px 10px 20px;
+  position:relative;
 }
 
 .channel-list-item:hover {
@@ -1139,6 +1188,7 @@
   margin: 3px;
   width: 98%;
   box-shadow: rgb(0 0 0) 2px 2px 1px inset;
+  overflow:scroll;
 }
 
 .user-details {
