--- a/src/App.css
+++ b/src/App.css
@@ -290,12 +290,20 @@
   line-height: 25px;
 }
 
-.loading-messages {
+.loading-app {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+}
+
+.loading-messages {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .their-message {
@@ -611,6 +619,18 @@
 .remove-group img {
   height: 30px;
   width: 30px;
+}
+
+.remove-group-disabled {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.remove-group-disabled img {
+  height: 28px;
+  width: 28px;
 }
 
 .message-games {
@@ -1342,6 +1362,16 @@
   box-sizing: border-box;
 }
 
+.requests-active-tab {
+  border-bottom-color: transparent;
+  font-weight: bold;
+  border-right: 0px;
+  z-index: 1;
+  position: relative;
+  background: #d6d6ce;
+  padding: 2px 8px;
+}
+
 .requests-tab button {
   display:flex;
   align-items: center;
@@ -1352,6 +1382,7 @@
   border:1px solid black;
   border-radius: 50%;
   padding: 0rem .25rem;
+  margin:0;
   color:white;
   margin-left: 3px;
   font-size: .75rem;
@@ -1898,12 +1929,38 @@
 
 /* Laptop monitors */
 @media (min-width:1024px) and (max-width:1300px) {
+
+  .buddies-tab {
+    font-size: .75rem;
+  }
+
   .chat-feed {
     width: 148%;
   }
 
   .header {
     width: 148%;
+  }
+
+  .active-tab {
+    padding: 3px 8px;
+  }
+
+  .inactive-tab {
+    padding: 4px 8px;
+  }
+
+  .requests-tab {
+    font-size: .75rem;
+  }
+
+  .requests-active-tab {
+    font-size: .75rem;
+    padding: 0px 8px;
+  }
+
+  .settings-tab {
+    font-size: .75rem;
   }
 
   .message-form-container {
@@ -1968,7 +2025,7 @@
   }
   
   .inactive-tab {
-    padding: 4px 15px;
+    padding: 4px 11px;
   }
 
   .user-tabs {
