Fixed group bug

--- a/src/App.css
+++ b/src/App.css
@@ -103,50 +103,6 @@
   border-left: 1px solid lightgray;
 }
 
-/* USER GROUP ITEM STYLES */
-.group-list-name {
-    margin-top: 30px;
-    font-weight: bold;
-    margin-bottom: -3px;
-    -webkit-user-select: none;
-    user-select: none;
-    font-family: "Michroma", sans-serif;
-    letter-spacing: -1px
-}
-
-.group-list-name::before {
-  content: "►";
-  font-size: .8rem;
-  position: relative;
-  left: -2px;
-  bottom: 2px;
-}
-
-.group-list-name-active {
-  margin-top: 30px;
-  font-weight: bold;
-  margin-bottom: 15px;
-  user-select: none;
-  font-family: "Michroma", sans-serif;
-  letter-spacing: -1px;
-  cursor: pointer;
-}
-
-.group-list-name-active::before {
-  content: "⮟";
-  font-size: .8rem;
-  position: relative;
-  left: -5px;
-  bottom: 2px;
-}
-
-.group-list-item {
-  position:relative;
-  display: flex;
-  flex-direction: column;
-  margin: 5px 5px 15px 20px;
-}
-
 .ce-wrapper {
   margin-left: 0px;
   margin-right: 0px;
@@ -156,6 +112,7 @@
   flex-shrink: 0;
   align-items: normal;
   justify-content: flex-start;
+  /* background-color: rgb(211, 211, 211); */
   background-color: #d6d6ce;
 }
 
@@ -204,9 +161,8 @@
   width: 75%;
   font-size: 0.75rem;
   margin-left: 25px;
-  color: #53acf9;
-  /* color: rgb(179, 179, 179); */
-  /* font-weight: bolder; */
+  color: rgb(179, 179, 179);
+  font-weight: bolder;
 }
 
 .header {
@@ -290,20 +246,12 @@
   line-height: 25px;
 }
 
-.loading-app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
 .loading-messages {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .their-message {
@@ -336,10 +284,10 @@
 }
 
 .buddy-avatar {
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   position: absolute;
-  left: -10px;
+  left: 25px;
 }
 
 .buddies-list-name {
@@ -354,10 +302,9 @@
 
 .buddies-list-name::before {
   content: "►";
-  font-size: .8rem;
+  font-size: 1rem;
   position: relative;
   left: -2px;
-  bottom:2px;
 }
 
 .buddies-list-name-active {
@@ -372,13 +319,11 @@
 }
 
 .buddies-list-name-active::before {
-  content: "⮟";
-  font-size: .8rem;
+  content: "▼";
+  font-size: 1rem;
   position: relative;
   left: -5px;
-  bottom: 2px;
 }
-
 
 .buddies {
   font-family: "MS Sans Serif", Arial, Helvetica, sans-serif;
@@ -608,7 +553,7 @@
   width: 80% 
 }
 
-.remove-group {
+.message-expressions {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -616,27 +561,16 @@
   cursor: pointer;
 }
 
-.remove-group img {
+.message-expressions img {
   height: 30px;
   width: 30px;
-}
-
-.remove-group-disabled {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-}
-
-.remove-group-disabled img {
-  height: 28px;
-  width: 28px;
 }
 
 .message-games {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 
 .message-games img {
@@ -777,144 +711,6 @@
 
 .user-warnings-container img {
   cursor: pointer;
-}
-
-/* GROUP WINDOW STYLES */
-.group-channel-name {
-  list-style: none;
-  font-size: 0.85rem;
-  margin-left: 25px;
-  font-weight: bold;
-  user-select: none;
-}
-
-.group-form-container {
-  height: 50%;
-  display: flex;
-  justify-content: center;
-}
-
-.group-form-container button {
-  cursor: pointer;
-  border: 2px outset;
-  background-color: transparent;
-  width:100%;
-  padding: .5rem 0;
-}
-
-.group-form-container button:active {
-  background: #e5e5e5;
-  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
-  -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
-  box-shadow: inset 0px 0px 5px #c1c1c1;
-  outline: none;
-}
-
-.group-form-container form {
-  display:flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;
-  font-weight: bolder;
-  position: relative;
-  bottom: 30px;
-}
-
-.groupInput {
-  margin-top: 5px;
-  width: 300px;
-  border: 2px inset;
-}
-
-.groupInput:focus {
-  outline: none;
-}
-
-.group-item-container {
-  background-color: lightgrey;
-  margin: 0px 3px;
-  width: 75px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  cursor:pointer;
-} 
-
-.group-item {
-  font-size: .8rem;
-  cursor: pointer;
-  padding: 2px;
-}
-
-
-.group-item-indicator {
-  height: 13px;
-  width: 13px;
-  position: relative;
-  border:1px solid black;
-  border-radius: 100%;
-}
-
-.group-list {
-  border-left: 1px solid lightgray;
-}
-
-.inactive {
-  background-color: white;
-}
-
-.active {
-  background-color: rgb(91 255 0);
-}
-
-.current-groups-container {
-  height: 30px;
-  width: 80%;
-  background-color:white;
-  border-radius: 5px;
-  border: 2px inset;
-  position:relative;
-  top: 30px;
-}
-
-.current-groups-list {
-  display: flex;
-  list-style: none;
-  justify-content: flex-start;
-  height: 100%;
-  align-items: center;
-  margin-bottom: 8px;
-}
-
-.group-window-container {
-  height:100%;
-  width:100%;
-  background: #d6d6ce;
-  display:flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.group-window-message {
-  font-size:.8rem;
-  width:75%;
-  font-weight: bold;
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-
-/* REMOVE GROUP WINDOW STYLES */
-.remove-group-window {
-  height:100%;
-  width:100%;
-  background: #d6d6ce;
-  display:flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-  justify-content: flex-start;
 }
 
 /* ICON WINDOW STYLES */
@@ -1078,7 +874,6 @@
   display: flex;
   flex-direction: column;
   margin: 15px 5px 10px 20px;
-  position:relative;
 }
 
 .channel-list-item:hover {
@@ -1207,28 +1002,14 @@
   font-size: 0.85rem;
 }
 
-.user-channels-outer {
-  border: 1px solid rgb(249, 245, 242);
-  position: relative;
-  background-color: #d6d6ce;
-  padding-top: 4px;
-  box-shadow: rgb(3 3 0) 1px 1px 1px;
-  margin: 4px 5px 0;
-  display: flex;
-  flex-direction: column;
-  -webkit-box-flex: 1;
-  flex-grow: 1;
-  height:73%;
-}
-
 .user-channels {
   background-color: white;
   font-size: 1.2rem;
-  height: 100%;
-  margin: 3px;
+  height: 73%;
+  border: 2px solid black;
+  margin-left: 2px;
   width: 98%;
-  box-shadow: rgb(0 0 0) 2px 2px 1px inset;
-  overflow:scroll;
+  margin-bottom: 4px;
 }
 
 .user-details {
@@ -1263,7 +1044,6 @@
 
 .user-settings-delete {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   position: relative;
   top: 70px;
@@ -1272,8 +1052,8 @@
 .user-settings-delete button {
   font-size: 0.75rem;
   border: 2px outset;
-  padding: 0.35rem 4rem;
-  margin-bottom: 25px;
+  padding: 0.35rem 1rem;
+  width: 100%;
 }
 
 .user-settings-delete button:active {
@@ -1282,10 +1062,6 @@
   -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
   box-shadow: inset 0px 0px 5px #c1c1c1;
   outline: none;
-}
-
-.user-settings-delete form {
-  margin-bottom: 25px;
 }
 
 .user-status {
@@ -1312,7 +1088,6 @@
   height: 100%;
   font-size: 1.25rem;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .user-settings-actions button:hover {
@@ -1347,85 +1122,26 @@
 }
 
 .user-tabs {
-  display:flex;
-  list-style: none;
-  align-items: flex-end;
-  margin: 0 5px 0 5px;
-  padding: 0px;
+  margin-left: 1px;
+  margin-bottom: 5px;
 }
 
-.buddies-tab {
-  box-sizing: border-box;
-}
-
-.requests-tab {
-  box-sizing: border-box;
-}
-
-.requests-active-tab {
-  border-bottom-color: transparent;
-  font-weight: bold;
-  border-right: 0px;
-  z-index: 1;
-  position: relative;
-  background: #d6d6ce;
-  padding: 2px 8px;
-}
-
-.requests-tab button {
-  display:flex;
-  align-items: center;
-}
-
-.friend-requests-count {
-  background-color:blue;
-  border:1px solid black;
-  border-radius: 50%;
-  padding: 0rem .25rem;
-  margin:0;
-  color:white;
-  margin-left: 3px;
-  font-size: .75rem;
-  font-weight: 900;
-}
-
-.settings-tab {
-  box-sizing: border-box;
-}
-
-.inactive-tab {
-    position: relative;
-    appearance: none;
-    padding: 4px 12.55px;
-    margin: 0px;
-    background: transparent;
-    font: inherit;
-    border-radius: 4px 0px 0px;
-    border-width: 1px 1px 0px;
-    border-top-style: solid;
-    border-right-style: solid;
-    border-left-style: solid;
-    border-top-color: rgb(249, 245, 242);
-    border-right-color: rgb(249, 245, 242);
-    border-left-color: rgb(249, 245, 242);
-    border-image: initial;
-    border-bottom-style: initial;
-    border-bottom-color: initial;
-    box-shadow: rgb(3 3 0) 1px 1px 1px;
-}
-
-.active-tab {
-  border-bottom-color: transparent;
-  font-weight: bold;
-  border-right: 0px;
-  z-index: 1;
-  position: relative;
-  background: #d6d6ce;
-  padding: 4px 8px;
+.user-tabs button {
+  border: none;
+  background-color: transparent;
+  padding: 0.5rem;
+  padding-top: 0.7rem;
+  padding-bottom: 0;
 }
 
 .user-tabs button:hover {
   cursor: pointer;
+}
+
+.user-tabs button:focus {
+  border-top: 2px outset;
+  border-right: 2px outset;
+  border-left: 2px outset;
 }
 
 /* NEW USER WELCOME PAGE STYLES */
@@ -1910,12 +1626,6 @@
   /* animation:fadeOut 1s 3s forwards; */
 }
 
-.success {
-  color:green;
-  font-size: 0.9rem;
-  margin-top: 3px;
-}
-
 @keyframes fadeOut {
   0% {
     opacity: 1;
@@ -1928,49 +1638,15 @@
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Media queries !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 /* Laptop monitors */
-@media (min-width:1024px) and (max-width:1300px) {
-
-  .buddies-tab {
-    font-size: .75rem;
-  }
-
+@media (max-width:1024px) {
   .chat-feed {
     width: 148%;
-  }
-
-  .header {
-    width: 148%;
-  }
-
-  .active-tab {
-    padding: 3px 8px;
-  }
-
-  .inactive-tab {
-    padding: 4px 8px;
-  }
-
-  .requests-tab {
-    font-size: .75rem;
-  }
-
-  .requests-active-tab {
-    font-size: .75rem;
-    padding: 0px 8px;
-  }
-
-  .settings-tab {
-    font-size: .75rem;
   }
 
   .message-form-container {
     min-width: 148%;
     max-width: 148%;
     width: 150vh;
-  }
-
-  .nav {
-    width: 148%;
   }
 
   .new-friend-form input {
@@ -1982,32 +1658,16 @@
     margin-bottom: 10px;
   }
 
-  .user-channels-outer {
-    height: 68%;
-  }
-
-  .user-tabs {
-    margin-top: 30px;
-  }
-
 }
 
 /* Large monitors/screens */
-@media (min-width:1300px) {
+@media (max-width:1440px) {
+  .ce-chat-list-column {
+    max-width: 32vh !important;
+  }
+
   .new-friend-form input {
     height:30px;
-  }
-
-  .new-user-header {
-    top: 52px;
-    left: 20px;
-    width: 157.1%;
-  }
-
-  .new-user-welcome-container {
-    width: 157%;
-    margin-left: 20px;
-    margin-top: 85px;
   }
 
   .user-actions {
@@ -2020,15 +1680,11 @@
     font-size: 1rem;
   }
 
-  .user-channels-outer {
-    height: 68%;
-  }
-  
-  .inactive-tab {
-    padding: 4px 11px;
+  .user-channels {
+    height: 70%;
   }
 
   .user-tabs {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
