--- a/src/App.css
+++ b/src/App.css
@@ -593,14 +593,6 @@
   align-items: center;
 }
 
-.message-form-actions-modal {
-  display: flex;
-  background-color: #d6d6ce;
-  width: 100%;
-  box-shadow: rgb(223 223 223) -1px -1px inset, grey 1px 1px inset;
-  align-items: center;
-}
-
 .message-form-container {
   position: absolute;
   bottom: 0%;
@@ -1091,11 +1083,42 @@
   display:flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  pointer-events: none;
+}
+
+.modal.enter-done {
+  opacity: 1;
+  pointer-events: visible;
+}
+
+.modal.exit {
+  opacity: 0;
+}
+
+.modal.show {
+  /* opacity: 1; */
+  pointer-events: visible;
 }
 
 .modal-content {
   width:500px;
   background-color: #fff;
+  transform: translateY(-200px);
+  transition: all 0.3s ease-in-out;
+}
+
+.modal.show .modal-content {
+  transform: translateY(-200px);
+}
+
+.modal.enter-done .modal-content {
+  transform: translateY(0);
+}
+
+.modal.exit .modal-content {
+  transform: translateY(-200px);
 }
 
 .modal-header, .modal-footer {
